adding a more responsive navbar
it's not working yet( the button), will later do it

--- a/index.html
+++ b/index.html
@@ -21,23 +21,52 @@
 
 
 <body> 
-
-        <table>
-            <tr>
-                <td class="tahubusuk">
-                    <strong>Tahubusuk</strong>
-                </td>
-                <td class= "projects">
+    <nav class="small_screen">
+        <ul>
+            <li>
+                <img class="hamburger_icon" src="images/Hamburger_icon.svg.png">
+            </li>
+        </ul>
+    </nav>
+<!--
+    <nav class="small_screen">
+        <ul>
+            <li class="tahubusuk">
+                <strong>Tahubusuk</strong>
+            </li>
+            <li class= "projects">
+                <strong>projects</strong>
+            </li>
+            <li class="books">
+                <strong>books</strong>
+            </li>
+            <li class= "movies">
+                <strong>movies</strong>
+            </li>
+        </ul>
+    -->
+    </nav>
+    <nav>
+        <ul>
+            <li class="tahubusuk">
+                <strong>Tahubusuk</strong>
+            </li>
+        </ul>
+    </nav>
+        <nav class="big_screen">
+            <ul>
+                <li class= "projects">
                     <strong>projects</strong>
-                </td>
-                <td class="books">
+                </li>
+                <li class="books">
                     <strong>books</strong>
-                </td>
-                <td class= "movies">
+                </li>
+                <li class= "movies">
                     <strong>movies</strong>
-                </td>
-            </tr>
-        </table>
+                </li>
+            </ul>
+
+        </nav>
 
     <img class="tofu_image" src= "images/Stinky_Tofu.png" style = "height:200; width: auto;">
     <div class="tofu_source">
