fixing the neon box

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <li class= "projects">
                     <strong>projects</strong>
                 </li>
-                <li class="books">
-                    <strong>books</strong>
+                <li class="miscellaneous">
+                    <strong>miscellaneous</strong>
                 </li>
-                <li class= "movies">
-                    <strong>movies</strong>
+                <li class= "contactme">
+                    <strong>contact me</strong>
                 </li>
             </ul>
 
@@ -77,10 +77,9 @@
         <h5 class = "introduction_describe"><em> An inspiring Web Developer and soon-to-be security analyst.</em> </h5>
         
      </div>
-    <div style="background-color: red; width:65%;margin:auto;">
-        <img src="images/giphy_2.gif" style="float:left;">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac bibendum sem, quis tincidunt diam. Vivamus porta nisi suscipit tortor lacinia sollicitudin. Vivamus ac lorem ipsum. Cras interdum in nulla at dapibus. Quisque sit amet velit porta, vehicula urna ut, tristique nisi. Vestibulum non libero sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam fermentum diam nec mi congue malesuada sit amet sit amet orci. Morbi tincidunt enim enim, ac sagittis lacus varius dictum. 
+    <div style="width:65%;margin:auto;">
+        <p class= "welcome"><!--keknya lebi bagus dibikin my latest post-->
+            Read my latest post
 
         </p>
             
@@ -88,8 +87,8 @@
 
     </div>
      <div class="contact_me">
-        <img class="contact_me_pic" src="images/linkedin.png" style = "height:35px; width:auto;">
-        <img class="contact_me_pic" src="images/github.png" style = "height:35px; width:auto;">
+        <a href="https://www.linkedin.com/in/christian-marcelino-968915205/"><img class="contact_me_pic" src="images/linkedin.png" style = "height:35px; width:auto;"></a>
+        <a href="https://github.com/tahubusuk"><img class="contact_me_pic" src="images/github.png" style = "height:35px; width:auto;"></a>
      </div>
 </body>
 </html>
