--- a/index.html
+++ b/index.html
@@ -21,54 +21,52 @@
 
 
 <body> 
-    <div>
-    <nav class="small_screen">
-        <ul>
-            <li>
-                <img class="hamburger_icon" src="images/Hamburger_icon.svg.png">
-            </li>
-        </ul>
-    </nav>
-<!-- to be made on click and so on
-    <nav class="small_screen">
-        <ul>
-            <li class="tahubusuk">
-                <strong>Tahubusuk</strong>
-            </li>
-            <li class= "projects">
-                <strong>projects</strong>
-            </li>
-            <li class="books">
-                <strong>books</strong>
-            </li>
-            <li class= "movies">
-                <strong>movies</strong>
-            </li>
-        </ul>
-    -->
-    </nav>
-    <nav>
-        <ul>
-            <li class="tahubusuk">
-                <strong>Tahubusuk</strong>
-            </li>
-        </ul>
-    </nav>
-        <nav class="big_screen">
-            <ul>
-                <li class= "projects">
-                    <strong>projects</strong>
-                </li>
-                <li class="miscellaneous">
-                    <strong>miscellaneous</strong>
-                </li>
-                <li class= "contactme">
-                    <strong>contact me</strong>
-                </li>
-            </ul>
 
-        </nav>
+
+<nav class="small_screen">
+    <div class="container">
+        <div class="dropdown">
+            <img class="hamburger_icon" src="images/hamburger_icon.png">
+        </div>
+                   
+         <div class="dropdown-content">
+             <div class="content">
+                <a> About me</a>
+            </div>
+            <div class ="content">
+                <a> Projects</a>
+            </div>
+             <div class ="content">
+                <a> Blogs</a>
+            </div>
+            <div class ="content">
+                <a> Contact me</a>
+            </div>
+        </div>
     </div>
+</nav>
+
+<nav>
+    <ul>
+        <li class="tahubusuk">
+            <strong>Tahubusuk</strong>
+        </li>
+    </ul>
+</nav>
+<nav class="big_screen">
+    <ul>
+        <li class= "projects">
+            <strong>projects</strong>
+        </li>
+       <li class="miscellaneous">
+            <strong>miscellaneous</strong>
+        </li>
+        <li class= "contactme">
+            <strong>contact me</strong>
+        </li>
+    </ul>
+</nav>
+
     <img class="neon_lights" src="images/ezgif-7-6f02c13ff8c0.gif">
     
     <div class="introduction">
