--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="dropdown">
                 <img class="hamburgerIcon" src="images/hamburger_icon.png">
+                <img class="crossIcon" src="images/img_28217.png">
             </div>
-
             <div class="dropdown-content">
                 <div class="content">
                     <a href="aboutMe.html"> <strong>About me</strong></a>
@@ -82,6 +82,8 @@
         <a href="https://www.linkedin.com/in/christian-marcelino-968915205/"><img class="socialMediaPic" src="images/linkedin.png"></a>
         <a href="https://github.com/tahubusuk"><img class="socialMediaPic" src="images/github.png"></a>
      </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="navbar.js" charset="UTF-8"></script>
 </body>
 </html>
 
